force-app/main/default/objects/Contract/fields/CommoditySectorFormula__c.field-meta.xml
<CustomField>
    <fullName>CommoditySectorFormula__c</fullName>
    <formula>TEXT(ServicePoint__r.CommoditySector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servizio</label>
    <type>Text</type>
</CustomField>