force-app/main/default/objects/Contract/fields/ContractSalesCompany__c.field-meta.xml
<CustomField>
    <fullName>ContractSalesCompany__c</fullName>
    <description>Società di lettura del contratto</description>
    <label>Società Di Vendita Del Contratto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SalesCompany</valueSetName>
    </valueSet>
</CustomField>