force-app/main/default/objects/Contract/fields/DeclaredExemptionThreshold__c.field-meta.xml
<CustomField>
    <fullName>DeclaredExemptionThreshold__c</fullName>
    <description>Dichiarazione d&apos;intento</description>
    <label>Soglia Dichiarata Di Esenzione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>