force-app/main/default/objects/Contract/fields/DL155Place__c.field-meta.xml
<CustomField>
    <fullName>DL155Place__c</fullName>
    <description>Introdotti da Del155</description>
    <label>Località</label>
    <length>50</length>
    <type>Text</type>
</CustomField>