force-app/main/default/objects/Contract/fields/DL155RemiCode__c.field-meta.xml
<CustomField>
    <fullName>DL155RemiCode__c</fullName>
    <description>Introdotti da Del155; Cabina di REgolazione e MIsura (REMI);  è il punto fisico di congiunzione tra le reti: l&apos;uscita della rete di trasporto nazionale e l&apos;entrata della rete di distribuzione locale.</description>
    <label>Codice ReMi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>