force-app/main/default/objects/Contract/fields/EstimatedEndDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedEndDate__c</fullName>
    <description>Data Stimata Fine Contratto.</description>
    <label>Data Stimata Fine Contratto</label>
    <type>Date</type>
</CustomField>