force-app/main/default/objects/Contract/fields/ExciseEle__c.field-meta.xml
<CustomField>
    <fullName>ExciseEle__c</fullName>
    <formula>TEXT(SBQQ__Order__r.ExciseEle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accise Ele</label>
    <type>Text</type>
</CustomField>