force-app/main/default/objects/Contract/fields/ExciseGas__c.field-meta.xml
<CustomField>
    <fullName>ExciseGas__c</fullName>
    <formula>TEXT(SBQQ__Order__r.ExciseGAS__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accise GAS</label>
    <type>Text</type>
</CustomField>