force-app/main/default/objects/Contract/fields/Iniziativa__c.field-meta.xml
<CustomField>
    <fullName>Iniziativa__c</fullName>
    <label>Iniziativa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>