force-app/main/default/objects/Contract/fields/InterestLock__c.field-meta.xml
<CustomField>
    <fullName>InterestLock__c</fullName>
    <description>Dati rilevanti per il calcolo</description>
    <label>Blocco Al Calcolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>