force-app/main/default/objects/Contract/fields/InvoicingPeriod__c.field-meta.xml
<CustomField>
    <fullName>InvoicingPeriod__c</fullName>
    <description>Dati rilevanti per il calcolo.</description>
    <label>Periodicità Di Fatturazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>