force-app/main/default/objects/Contract/fields/InvoicingPeriodDescription__c.field-meta.xml
<CustomField>
    <fullName>InvoicingPeriodDescription__c</fullName>
    <description>Dati rilevanti per il calcolo.</description>
    <label>Descrizione Periodicità Fatturazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>