force-app/main/default/objects/Contract/fields/IsMigrated__c.field-meta.xml
<CustomField>
    <fullName>IsMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo per tracciare che si tratta di un Oggetto migrato</description>
    <label>Migrato</label>
    <type>Checkbox</type>
</CustomField>