force-app/main/default/objects/Contract/fields/LegacyContractCode__c.field-meta.xml
<CustomField>
    <fullName>LegacyContractCode__c</fullName>
    <description>Numero contratto da precedente sistema origine (migrazioni precedenti)</description>
    <label>Codice Contratto (Legacy)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>