force-app/main/default/objects/Contract/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>TEXT(SBQQ__Order__r.Market__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mercato</label>
    <type>Text</type>
</CustomField>