force-app/main/default/objects/Contract/fields/MarkForRenewal__c.field-meta.xml
<CustomField>
    <fullName>MarkForRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marca Per Il Rinnovo</label>
    <type>Checkbox</type>
</CustomField>