force-app/main/default/objects/Contract/fields/OldContractMoMi__c.field-meta.xml
<CustomField>
    <fullName>OldContractMoMi__c</fullName>
    <label>Contratto Old MoMi</label>
    <length>50</length>
    <type>Text</type>
</CustomField>