force-app/main/default/objects/Contract/fields/OldWasteContract__c.field-meta.xml
<CustomField>
    <fullName>OldWasteContract__c</fullName>
    <description>Per contratti ambito Ambiente: corrisponde al codice contratto da sistema precedente da cessazione TIA.</description>
    <label>Contratto Old (TARI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>