force-app/main/default/objects/Contract/fields/OriginalBailment__c.field-meta.xml
<CustomField>
    <fullName>OriginalBailment__c</fullName>
    <description>Relativo al deposito cauzionale ed estratto conto</description>
    <label>Deposito originario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>