force-app/main/default/objects/Contract/fields/PostponementTimeUnit__c.field-meta.xml
<CustomField>
    <fullName>PostponementTimeUnit__c</fullName>
    <label>Unità Di Tempo Per Proroga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>