force-app/main/default/objects/Contract/fields/PostponementTimeUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>PostponementTimeUnitNumber__c</fullName>
    <label>Numero Unità Di Tempo Per Proroga</label>
    <length>255</length>
    <type>Text</type>
</CustomField>