force-app/main/default/objects/Contract/fields/PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDate__c</fullName>
    <label>Data Stipula Contratto</label>
    <type>Date</type>
</CustomField>