force-app/main/default/objects/Contract/fields/RowIdSiebel__c.field-meta.xml
<CustomField>
    <fullName>RowIdSiebel__c</fullName>
    <description>Valorizzato solo per record migrati</description>
    <label>Recor Correlato SIEBEL</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>