force-app/main/default/objects/Contract/fields/SAPContractCode__c.field-meta.xml
<CustomField>
    <fullName>SAPContractCode__c</fullName>
    <description>Numero Contratto Sap</description>
    <externalId>true</externalId>
    <label>Codice Contratto SAP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>