force-app/main/default/objects/Contract/fields/SAPSDDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPSDDocumentNumber__c</fullName>
    <label>Num Documento SD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>