force-app/main/default/objects/Contract/fields/ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>ServicePoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto di fornitura</label>
    <referenceTo>ServicePoint__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>