force-app/main/default/objects/Contract/fields/SubscriberType__c.field-meta.xml
<CustomField>
    <fullName>SubscriberType__c</fullName>
    <label>Qualità</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SubscriberType</valueSetName>
    </valueSet>
</CustomField>