force-app/main/default/objects/Contract/fields/TargetBailment__c.field-meta.xml
<CustomField>
    <fullName>TargetBailment__c</fullName>
    <description>Relativo al deposito cauzionale ed estratto conto</description>
    <label>Deposito obiettivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>