force-app/main/default/objects/Contract/fields/TerminationTimeUnit__c.field-meta.xml
<CustomField>
    <fullName>TerminationTimeUnit__c</fullName>
    <label>Unità Di Tempo Per Disdetta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>