force-app/main/default/objects/Contract/fields/TerminationTimeUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>TerminationTimeUnitNumber__c</fullName>
    <label>Numero Unità Di Tempo Per Disdetta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>