force-app/main/default/objects/Contract/fields/TotalTurnoverVATExempted__c.field-meta.xml
<CustomField>
    <fullName>TotalTurnoverVATExempted__c</fullName>
    <description>Dichiarazione d&apos;intento (Totale Fatturato Esente IVA SD + IS-U)</description>
    <label>Totale Fatturato Esente IVA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>