force-app/main/default/objects/Contract/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>TEXT(SBQQ__Order__r.VAT__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA</label>
    <type>Text</type>
</CustomField>