force-app/main/default/objects/Contract/fields/WithdrawalTimeUnit__c.field-meta.xml
<CustomField>
    <fullName>WithdrawalTimeUnit__c</fullName>
    <label>Unità Di Tempo Per Recesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>