force-app/main/default/objects/Contract/fields/WithdrawalTimeUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>WithdrawalTimeUnitNumber__c</fullName>
    <label>Numero Unità Di Tempo Per Recesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>